# rustodo

./: .dockerignore  .gitignore  DOCKER.md  DOCKER_SETUP_SUMMARY.md  QUICKSTART.md  README.md  compose.yml  env.example
.github/workflows/: release.yml
backend/: .dockerignore  Cargo.toml  Dockerfile  init.sql
backend/.sqlx/: query-9ae72cacd2be7531e7206b3509e5cc9226d0f5a13361ad5a7ee6db5eb854b249.json  query-d529054e20b3c4743a312fdf65271da67fab7f098ae512aba3daa706d02fa5db.json  query-e4734942ae9a331a3d3a9efea003486b18271ee8e9e70a640fc816ffe96ca203.json
backend/src/: main.rs
backend/src/api/: errors.rs  mod.rs  tasks.rs
backend/src/config/: env.rs
backend/src/models/: task.rs
backend/src/repositories/: task.rs
backend/src/services/: task.rs
backend/src/state/: app.rs
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/public/styles/: Dracula.css  GruvboxDark.css  Malifex.css  ModernDark.css  ModernLight.css  RosePineDark.css  ScaryMonsters.css  SolarizedDark.css
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: config.ts
frontend/src/api/hooks/: useAddTask.ts  useAxios.ts  useDeleteTask.ts  useGetTasks.ts  useUpdateTask.ts
frontend/src/components/Action/: Action.tsx
frontend/src/components/ActionMenu/: ActionMenu.tsx
frontend/src/components/AddTaskPanel/: AddTaskPanel.tsx
frontend/src/components/EditTaskPanel/: EditTaskPanel.tsx
frontend/src/components/Task/: Task.tsx
frontend/src/config/: themes.ts
frontend/src/hooks/: useTheme.ts
(+3 files in other folders)
