[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.6"
dotenvy = "0.15.7"
log = "0.4.28"
once_cell = "1.21.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "mysql", "time", "uuid"] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"]}
tower-http = { version = "0.6.6", features = ["cors", "trace"]}
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"]}
uuid = { version = "1.18.1", features = ["v4"] }
